<resources>
    <string name="app_name">Fortism</string>
    <string name="image">/@image</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="signup">Signup</string>
    <string name="male">Male</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email-Id</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">About us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Plan</string>
    <string name="Email_id">Email-id</string>
    <string name="about_us">About us</string>
    <string name="communicate">Communicate</string>
    <string name="sniki241199_gmail_com">sniki241199@gmail.com</string>
    <string name="Gallery">Gallery</string>
    <string name="signup_page">Signup Page</string>
    <string name="contact_no">Contact No</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full Name</string>
    <string name="android" />
    <string name="img">TODO</string>
    <string name="button">Button</string>
    <string name="home2">TODO</string>
    <string name="two">TO</string>
    <string name="hi_user">Hi User!</string>
    <string name="it_s_time_to_explore_the_world">It\'s time to explore the world</string>
    <string name="next">Next</string>
    <string name="plan">Plan</string>
    <string name="forts_of_maharashtra_4_nights_5_days">Forts of Maharashtra : 4 Nights / 5 Days</string>
    <string name="day_1_mumbai_distance_km_drive_time_hr_day_highlights_gate_way_of_india_marine_drive_and_juhu_beach">DAY 1 : Mumbai (Distance - Km. Drive time - Hr.) Day Highlights :-Gate Way of India, Marine Drive, and Juhu Beach.</string>
    <string name="day_2_mumbai_pune_distance_180_km_drive_time_4_hr_day_highlights_sinhagarh_fort">DAY 2 : Mumbai – Pune (Distance - 180 Km. Drive time - 4 Hr.) Day Highlights :-Sinhagarh fort.</string>
    <string name="day_3_pune_murud_distance_300_km_drive_time_8_hr_day_highlights_raigad_fort">DAY 3 : Pune – Murud (Distance - 300 Km. Drive time - 8 Hr.) Day Highlights :-Raigad Fort.</string>
    <string name="day_4_murud_distance_km_drive_time_hr_day_highlights_murud_janjira_fort_karnala_fort_kashid_beach">DAY 4 : Murud (Distance - Km. Drive time - Hr.) Day Highlights :-Murud Janjira Fort, Karnala Fort, Kashid beach.</string>
    <string name="day_5_murud_mumbai_distance_150_km_drive_time_4_hr_after_breakfast_check_out_from_hotel_and_transfer_to_mumbai_railway_station_or_mumbai_airport_for_your_onward_journey">DAY 5 : Murud – Mumbai (Distance - 150 Km. Drive time - 4 Hr.) After Breakfast, Check-out from Hotel and transfer to Mumbai Railway Station or Mumbai Airport for your onward journey.</string>
    <string name="so_are_you_ready_to_go">So Are You Ready to go?</string>
    <string name="menu_plan">plan</string>
    <string name="signup_here">SignUp Here</string>
    <string name="w1">Welcome to your ‘Forts of Maharashtra\' Tour, Arrival at Mumbai Airport or Mumbai Railway Station transfer to the Mumbai Hotel, Evening Visit to Gate Way of India, Marine Drive, and Juhu Beach. The Gateway of India has become the most famous monument of the city Mumbai. The Gateway of India was constructed by the King George V and Queen Marry to Bombay, before the Darbar in Delhi in December 1911. The foundation stone of the Gateway of India monument was laid down on 31st day of March in the year 1913 and George Wittet‘s final design of the Gateway of India was approved in August 1914, Overnight stay at Mumbai.</string>
    <string name="s1">After Breakfast, Check out from hotel and proceed to Pune, Enroute visit to Sinhagarh fort. Sinhagarh fort, whose earlier name was Kondana or Kondhana, stands 20kms, south-west of Pune. Perched on an isolated cliff of the Bhuleswar range of the Sahyadri Mountains, its height above sea-level is 1380 metres. Given natural protection by its very steep slopes, the walls and bastions were constructed at only key places; it has two gates – the Kalyan Darwaza in the south-east and the Pun Darwaza in the north-east, Evening check in to the hotel and overnight stay at Pune Hotel.</string>
    <string name="r1"><![CDATA[After Breakfast, Check out from Hotel & proceed to Murud. Enroute visit to Raigad Fort, Raigad fort is located around 2850 feets high from the sea level. The fort is situated at highest peak of Sahyadri Mountains and because of that, fort gets the protection naturally. In 1664, King Shivaji declared Raigad as the capital of his empire. Shiv Rajyabhishek (crowning ceremony of King Shivaji)is an important event in the History of India Evening on Arrival check into Hotel & Overnight stay at Murud.]]></string>
    <string name="j1">After Breakfast, Full day sightseeing Visit to Murud Janjira Fort and Karnala Fort, Janjira is one of the strongest marine forts of India (the word ‘Janjira’ is a corruption of the Arabic word Jazira for island). The forts are approached by sailboats from Rajapuri jetty. The main gate of the fort faces Rajapuri on the shore and can be seen only when one is quite close to it Evening enjoy in Kashid beach. Overnight stay at Murud Hotel.</string>
    <string name="b1">After Breakfast, Check-out from Hotel and transfer to Mumbai Railway Station or Mumbai Airport for your onward journey.</string>
    <string name="e1">A/c Indica : 18,500/- A/c Ertiga / Swift / Etios : 21,500/- A/c Innova : 24,500/- A/c Tempo Traveller : : 35,500/- Non A/c Tempo Traveller : : 29,500/- Toll, Tax , Parking is including Upto 2000rs. Good Driver With Good Condition Vehicle Driver Will Be With Mobile Phone Vehicle shall be used only as per your tour Itinerary. 6 % Service Tax Applicable on Total Billing Amount Km will be Charges from Chinchwad Office to Chinchwad Office</string>
    <string name="k1">know more...</string>
    <string name="logout">Logout</string>
    <string name="c1">Contact Us: 9619513146</string>
    <string name="l1">Let\'s explore... the pride of Maharashtra!</string>
    <string name="todo">TODO</string>
    <string name="f1"><![CDATA[->Fortism is an app is to share plans for the fort tourism in maharashtra and help enthusiastic people plan their weekend treks,enjoy and relieve whats left to us,get inspiration,stay fit. -> Travel is the main thing you purchase that makes you more extravagant. ->We at \'Fortism\',swear by this and put stock in satisfying travel dreams that make you perpetually rich constantly. ->know about the incredible and unlimited Maharashtra heritage.]]></string>
    <string name="d1">Let\'s explore...the pride of Maharashtra!</string>

</resources>
